# schnitsum

./: .gitignore  README.md  pyproject.toml
examples/: docs.txt
schnitsum/: __init__.py  main.py
