[tool.poetry]
name = "schnitsum"
version = "0.1.1"
description = ""
authors = ["sobamchan <oh.sore.sore.soutarou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.22.2"
torch = "^1.12.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
